--- a/style.css
+++ b/style.css
@@ -1,8 +1,114 @@
-:root {
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&family=Lexend+Deca:wght@100..900&display=swap');
 
+:root {
+    --color-orange: hsl(31, 77%, 52%);
+    --color-orange-lighter: #ffcc92;
+    --color-cyan: hsl(184, 100%, 22%);
+    --color-cyan-lighter: #a8e4f1;
+    --color-dark-cyan: hsl(179, 100%, 13%);
+    --color-dark-cyan-lighter: #99c6c5;
+
+    --font-family-big-shoulder: "Big Shoulders Display", serif;
+    --font-family-lexend-deca: "Lexend Deca", serif;
 }
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+main {
+    width: 100%;
+    height: 100dvh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.card {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 22%;
+    padding: 3rem;
+    gap: 1.5rem;
+}
+.card:first-child {
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+}
+.card:last-child {
+    border-top-right-radius: 7px;
+    border-bottom-right-radius: 7px;
+}
+.card img {
+    width: 30%;
+}
+.card h1 {
+    font-family: var(--font-family-big-shoulder);
+    font-weight: 700;
+    font-size: 2.5rem;
+    color: #fff;
+}
+.card p {
+    font-family: var(--font-family-lexend-deca);
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.5rem;
+}
+.card a {
+    font-family: var(--font-family-lexend-deca);
+    font-size: 15px;
+    margin-top: 3rem;
+    width: max-content;
+    padding: 0.8rem 2rem;
+    border-radius: 24px;
+    text-decoration: none;
+    background-color: #fff;
+    border: 2px solid #fff;
+    transition: 0.5s all;
+}
+.card-1 {
+    background-color: var(--color-orange);
+    color: var(--color-orange-lighter);
+}
+.card-2 {
+    background-color: var(--color-cyan);
+    color: var(--color-cyan-lighter);
+}
+.card-3 {
+    background-color: var(--color-dark-cyan);
+    color: var(--color-dark-cyan-lighter);
+}
+.card-1 a {
+    color: var(--color-orange);
+}
+.card-2 a {
+    color: var(--color-cyan);
+}
+.card-3 a {
+    color: var(--color-dark-cyan);
+}
+.card a:hover {
+    border: 2px solid #fff;
+    color: #fff;
+    transition: 0.5s all;
+}
+.card-1 a:hover {
+    background-color: var(--color-orange);
+}
+.card-2 a:hover {
+    background-color: var(--color-cyan);
+}
+.card-3 a:hover {
+    background-color: var(--color-dark-cyan);
+}
+
+@media screen and (max-width: 500px) {
+    .card:first-child {
+        border-top-right-radius: 7px;
+        border-bottom-left-radius: 0px;
+    }
+    .card:last-child {
+        border-bottom-left-radius: 7px;
+        border-top-right-radius: 0px;
+    }
 }
